# universal-language-server-plugin

./: .editorconfig  .gitignore  .gitlab-ci.yml  .guix-channel  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM.scm  Justfile  LICENSE  MAINTAINERS.md  Makefile  README.adoc  README.md  RSR_COMPLIANCE.adoc  RSR_COMPLIANCE.md  SECURITY.md  STATE.scm  codemeta.json  flake.nix  guix.scm
.github/: dependabot.yml
.github/workflows/: codeql.yml
.well-known/: ai.txt  dc.xml  humans.txt  security.txt
clients/emacs/: universal-connector.el
clients/helix/: languages.toml
clients/jetbrains/: UniversalConnector.kt
clients/neovim/: init.lua
clients/sublime/: UniversalConnector.py
clients/vscode/: extension.ts  package.json  tsconfig.json
clients/zed/: settings.json
deployment/: Containerfile  Dockerfile  docker-compose.yml  podman-compose.yml
docs/: API.md  CITATIONS.adoc
examples/configs/: server.env
examples/conversions/: example.html  example.json  example.md
server/: Cargo.toml
server/src/: core.rs  document_store.rs  http.rs  lsp.rs  main.rs  monitoring.rs  websocket.rs
server/src/formats/: toml.rs  xml.rs  yaml.rs
server/tests/: core_tests.rs  http_api_tests.rs  lsp_compliance.rs
web/: app.js  index.html  styles.css
