[package]
name = "universal-connector-server"
version = "0.1.0"
edition = "2021"
authors = ["Universal Connector Contributors"]
description = "LSP-based universal plugin server for multi-editor document conversion"
license = "MIT"

[[bin]]
name = "universal-connector-server"
path = "src/main.rs"

[dependencies]
# LSP server framework
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrent data structures
dashmap = "5.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Document conversion (extensible)
pulldown-cmark = "0.9"  # Markdown parsing
scraper = "0.18"        # HTML parsing
html5ever = "0.26"      # HTML serialization

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
tower-test = "0.4"
axum-test = "14.3"

# Benchmarking (optional, install separately if needed)
# criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
